--- a/styles.css
+++ b/styles.css
@@ -9,13 +9,13 @@ p {
     color: #444;
 }
 
-button {
+/* #start-record-btn {
     border-radius: 50%;
 }
 
-button:focus {
+#start-record-btn:focus {
     outline: 0;
-}
+} */
 
 .container {
     max-width: 700px;
@@ -89,7 +89,29 @@ button:focus {
 
 }
 
+.button {
+  margin: 100px auto 0;
+  width: 100px;
+  height: 100px;
+  border: 10px solid #fff;
+  border-radius: 50%;
+  cursor: pointer;
+}
 
+.inner {
+  /* cursor: crosshair; */
+  background-color: #9e1919;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  transition: all 0.2s ease;
+  transform: scale(0.94);
+}
+
+.button.active .inner {
+  transform: scale(0.5);
+  border-radius: 12%;
+}
 
 /* -- Demo ads -- */
 
