--- a/styles.css
+++ b/styles.css
@@ -5,12 +5,13 @@ ul {
 }
 */
 body {
-  background: #E1BEE7;
+  background: #ffffff;
 }
 
 /* p {
     color: #444;
 } */
+
 #start-record-btn {
   border-radius: 50%;
 }
@@ -32,7 +33,8 @@ body {
     "w w w w w"
     "r r r r r";
     /* margin: 0 auto; */
-  padding: 50px 50px;
+    grid-auto-columns: 1fr 3fr 3fr 3fr 1fr;
+  padding: 2vh 5vw;
   text-align: center;
 }
 
@@ -54,20 +56,37 @@ body {
 
 #input-single {
   text-align: center;
-  height: 10vh;
+  margin: 0;
+  min-height: 4vw;
   grid-area: ta;
+  font-size: 5vw;
+  font-family: 'Corben', cursive;
+  font-weight: bold;
+  color: #a3a2a2;
 }
 
 #level-display {
   grid-area: l;
+  font-family: 'PT Mono', monospace;
+  font-size: 3vw;
+  color: #a3a2a2;
 }
 
 #prompt {
+  margin-top: 10vw;
   grid-area: p;
+  font-size: 5vw;
+  font-family: 'Corben', cursive;
+  font-weight: bold;
+  color: #4f3896;
+  margin-bottom: 10px;
 }
 
 #score-display {
   grid-area: sc;
+  font-family: 'PT Mono', monospace;
+  font-size: 3vw;
+  color: #a3a2a2;
 }
 
 .container h1 {
@@ -135,17 +154,17 @@ body {
 }
 
 .button {
-  margin: 0 auto 0;
-  width: 100px;
-  height: 100px;
-  border: 10px solid #fff;
+  margin: 4vw auto 0;
+  width: 8vw;
+  height: 8vw;
+  border: 0.5vw solid #4f3896;
   border-radius: 50%;
   cursor: pointer;
   grid-area: b;
 }
 
 .inner {
-  background-color: #9e1919;
+  background-color: #4f3896;
   width: 100%;
   height: 100%;
   border-radius: 50%;
